--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-modal-bootstrap": "^1.1.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
